# smallevals

./: .gitignore  README.md  example_usage.py  example_usage_chromadb.py  pyproject.toml
evalvd/: __init__.py  api.py  cli.py  exceptions.py
evalvd/eval/: __init__.py  engine.py  metrics.py
evalvd/eval/analysis/: __init__.py
evalvd/generation/: __init__.py  qa_generator.py
evalvd/models/: __init__.py  loader.py
evalvd/ui_dash/: app.py  callbacks.py
evalvd/utils/: __init__.py  data_organization.py  logger.py
evalvd/vdb_integrations/: elastic_con.py  mongodb_con.py  pgvector_con.py  qdrant_con.py  turbopuffer_con.py
evalvd/vectordb/: __init__.py
smallevals/: __init__.py  api.py
smallevals/eval/: __init__.py  engine.py  metrics.py
smallevals/eval/analysis/: retrieval_patterns.py
smallevals/generation/: qa_generator.py
smallevals/models/: __init__.py  golden_generator.py
smallevals/ui_dash/: app.py  callbacks.py  components.py  ranking.py  report_generator.py
smallevals/utils/: results_manager.py  versioning.py
smallevals/vdb_integrations/: __init__.py  base.py  chroma_con.py  connection.py  elastic_con.py  faiss_con.py  milvus.py  milvus_con.py  pgvector_con.py  pinecone_con.py  weaviate_con.py
tests/: README.md  chromadb_test.py  conftest.py  populate_dbs.py  test_chromadb.py  test_elastic.py  test_eval_engine.py  test_faiss.py  test_metrics.py  test_milvus.py  test_pgvector.py  test_qa_generator.py  test_qdrant.py  test_weaviate.py
